# RAGit

./: Dockerfile  Dockerfile_Under_Development  docker-compose.yml  main.py  pyproject.toml  template.py  template_creator.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  main.py
app/core/: document_processor.py  embeddings.py
app/utils/: logger.py
