[project]
name = "ragit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.1.0",
    "datasets>=4.4.1",
    "fastapi>=0.124.4",
    "httpx>=0.26.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langsmith==0.4.55",
    "mypy>=1.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "ragas==0.3.7",
    "ruff>=0.2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]
